--- a/languages/feedweb.pot
+++ b/languages/feedweb.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the Feedweb package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Feedweb 1.1.5\n"
+"Project-Id-Version: Feedweb 1.1.7\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
-"POT-Creation-Date: 2012-03-30 11:18:01+00:00\n"
+"POT-Creation-Date: 2012-03-31 17:17:46+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -38,6 +38,10 @@ msgstr ""
 
 #: feedweb.php:169
 msgid "You do not have sufficient permissions to access this page."
+msgstr ""
+
+#: feedweb.php:177
+msgid "Feedweb Plugin Settings"
 msgstr ""
 
 #: feedweb.php:221
@@ -200,9 +204,9 @@ msgstr ""
 msgid "Remove Widget"
 msgstr ""
 
-#. #-#-#-#-#  plugin.pot (Feedweb 1.1.5)  #-#-#-#-#
+#. #-#-#-#-#  plugin.pot (Feedweb 1.1.7)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
-#. #-#-#-#-#  plugin.pot (Feedweb 1.1.5)  #-#-#-#-#
+#. #-#-#-#-#  plugin.pot (Feedweb 1.1.7)  #-#-#-#-#
 #. Author of the plugin/theme
 msgid "Feedweb"
 msgstr ""
