--- a/languages/FWTD-ru_RU.po
+++ b/languages/FWTD-ru_RU.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedweb\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
-"POT-Creation-Date: 2012-03-31 17:17:46+00:00\n"
-"PO-Revision-Date: 2012-03-31 20:21+0200\n"
+"POT-Creation-Date: 2012-03-31 20:22:13+00:00\n"
+"PO-Revision-Date: 2012-03-31 23:26+0200\n"
 "Last-Translator: Michael Rovinsky <misha@feedweb.net>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -21,6 +21,24 @@ msgstr "Feedweb Виджет"
 #: feedweb.php:91
 msgid "Cannot insert widget into a post published %d days ago"
 msgstr "Невозможно установить виджет на пост, опубликованный %d дн. назад"
+
+#: feedweb.php:99
+msgid "Insert Widget"
+msgstr "Вставить Виджет"
+
+#: feedweb.php:99
+msgid "Insert"
+msgstr "Вставить"
+
+#: feedweb.php:105
+#: widget_remove.php:69
+msgid "Remove Widget"
+msgstr "Удалить Виджет"
+
+#: feedweb.php:105
+#: widget_dialog.php:303
+msgid "Remove"
+msgstr "Удалить"
 
 #: feedweb.php:152
 msgid "No Delay"
@@ -187,10 +205,6 @@ msgstr "Передвинуть вверх"
 msgid "Move Down"
 msgstr "Передвинуть вниз"
 
-#: widget_dialog.php:303
-msgid "Remove"
-msgstr "Убрать"
-
 #: widget_dialog.php:315
 msgid "Cancel"
 msgstr "Отменить"
@@ -198,10 +212,6 @@ msgstr "Отменить"
 #: widget_remove.php:17
 msgid "The rating widget in the post %s will be removed"
 msgstr "Виджет будет удален из поста %s"
-
-#: widget_remove.php:69
-msgid "Remove Widget"
-msgstr "Удалить Виджет"
 
 #. #-#-#-#-#  plugin.pot (Feedweb 1.1.7)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
