--- a/languages/FWTD-ru_RU.po
+++ b/languages/FWTD-ru_RU.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Feedweb\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
 "POT-Creation-Date: 2012-03-31 20:22:13+00:00\n"
-"PO-Revision-Date: 2012-03-31 23:26+0200\n"
+"PO-Revision-Date: 2012-04-02 14:47+0200\n"
 "Last-Translator: Michael Rovinsky <misha@feedweb.net>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -62,7 +62,7 @@ msgstr "У вас нет доступа на эту страницу"
 
 #: feedweb.php:177
 msgid "Feedweb Plugin Settings"
-msgstr "Настройки плагина Feedweb"
+msgstr "Параметры плагина Feedweb"
 
 #: feedweb.php:221
 msgid "Please enter a valid width"
