--- a/languages/FWTD-de_DE.po
+++ b/languages/FWTD-de_DE.po
@@ -2,17 +2,17 @@
 # This file is distributed under the same license as the Feedweb package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Feedweb 1.1.5\n"
+"Project-Id-Version: Feedweb 1.2.1\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
 "POT-Creation-Date: 2012-04-10 14:36:07+00:00\n"
-"PO-Revision-Date: 2012-04-10 17:40+0200\n"
-"Last-Translator: Michael Rovinsky <misha@feedweb.net>\n"
-"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Hebrew\n"
-"X-Poedit-Country: ISRAEL\n"
+"PO-Revision-Date: 2012-04-10 17:50+0200\n"
+"Last-Translator: Michael Rovinsky <misha@feedweb.net>\n"
+"Language-Team: \n"
+"X-Poedit-Language: German\n"
+"X-Poedit-Country: GERMANY\n"
 
 #: feedweb.php:71
 msgid "Feedweb Widget"
