--- a/languages/FWTD-zh_CN.po
+++ b/languages/FWTD-zh_CN.po
@@ -2,17 +2,17 @@
 # This file is distributed under the same license as the Feedweb package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Feedweb 1.1.5\n"
+"Project-Id-Version: Feedweb 1.2.7\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
 "POT-Creation-Date: 2012-04-22 07:25:06+00:00\n"
-"PO-Revision-Date: 2012-04-22 11:46+0200\n"
-"Last-Translator: Michael Rovinsky <misha@feedweb.net>\n"
-"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Italian\n"
-"X-Poedit-Country: ITALY\n"
+"PO-Revision-Date: 2012-04-22 10:29+0200\n"
+"Last-Translator: Michael Rovinsky <misha@feedweb.net>\n"
+"Language-Team: \n"
+"X-Poedit-Language: Chinese\n"
+"X-Poedit-Country: China\n"
 
 #. #-#-#-#-#  plugin.pot (Feedweb 1.2.7)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
