--- a/languages/FWTD-fr_FR.po
+++ b/languages/FWTD-fr_FR.po
@@ -144,7 +144,7 @@ msgid "Question '{0}' is already selected"
 msgstr ""
 
 #: widget_dialog.php:124
-msgid "Please pecify a question"
+msgid "Please specify a question"
 msgstr ""
 
 #: widget_dialog.php:179
