--- a/languages/FWTD-de_DE.po
+++ b/languages/FWTD-de_DE.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: Feedweb 1.2.1\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/feedweb\n"
 "POT-Creation-Date: 2012-05-28 19:03:39+00:00\n"
-"PO-Revision-Date: 2012-05-28 22:13+0200\n"
-"Last-Translator: Menashè Eliezer <menashe.eliezer@gmail.com>\n"
+"PO-Revision-Date: 2012-06-04 09:19+0200\n"
+"Last-Translator: Anna Davidov <anna@feedweb.net>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -16,33 +16,35 @@ msgstr ""
 
 #: feedweb.php:103
 msgid "Insert Rating Widget"
-msgstr ""
+msgstr "Bewertungs-Widget einfügen"
 
 #: feedweb.php:116
 msgid "The widget has been removed by the Feedweb administrator."
-msgstr ""
+msgstr "Das Widget wurde von einem Feedweb Verwalter entfernt"
 
 #: feedweb.php:118
 msgid "Unknown error."
-msgstr ""
+msgstr "Unbekannter Fehler"
 
 #: feedweb.php:119
 msgid ""
 "\n"
 "Please contact Feedweb (contact@feedweb.net)"
 msgstr ""
+"\n"
+"Bitte kontaktieren Sie Feedweb (contact@feedweb.net)"
 
 #: feedweb.php:129
 msgid ""
 "Edit / Remove Rating Widget\n"
 "(%s Votes. Average Score: %s)"
-msgstr ""
+msgstr "Bewertungs Widget bearbeiten / entfernen(%s Bewertungen. durchschnittliche Punktzahl: %s)"
 
 #: feedweb.php:135
 msgid ""
 "Edit / Remove Rating Widget\n"
 "(No votes yet)"
-msgstr ""
+msgstr "Bewertungs Widget bearbeiten / entfernen(noch keine Bewertungen vorhanden("
 
 #: feedweb.php:165
 msgid "Settings"
@@ -50,23 +52,23 @@ msgstr "Einstellungen"
 
 #: feedweb.php:235
 msgid "The Feedweb service is temporarily unavailable due to system maintenance"
-msgstr ""
+msgstr "Der Feedweb Service ist vorübergehend nicht verfügbar aufgrund Systemwartung"
 
 #: feedweb_options.php:38
 msgid "Classic"
-msgstr ""
+msgstr "Klassisch"
 
 #: feedweb_options.php:38
 msgid "Monochrome"
-msgstr ""
+msgstr "Einfarbig"
 
 #: feedweb_options.php:38
 msgid "Light Blue"
-msgstr ""
+msgstr "Hellblau"
 
 #: feedweb_options.php:38
 msgid "Dark Blue"
-msgstr ""
+msgstr "Dunkelblau"
 
 #: feedweb_options.php:53
 msgid "No Delay"
@@ -102,19 +104,19 @@ msgstr "Breite ist außerhalb des zulässigen Bereichs"
 
 #: feedweb_options.php:159
 msgid "Please enter a valid Front Widget height"
-msgstr ""
+msgstr "Bitte geben Sie eine gültige Front-Widgethöhe ein."
 
 #: feedweb_options.php:165
 msgid "Front Widget height is out of range"
-msgstr ""
+msgstr "Die Front-Widgethöhe ist außerhalb des zulässigen Bereichs"
 
 #: feedweb_options.php:214
 msgid "Rating Widget"
-msgstr ""
+msgstr "Bewertungs-Widget"
 
 #: feedweb_options.php:215
 msgid "Front Widget"
-msgstr ""
+msgstr "Front-Widget"
 
 #: feedweb_options.php:225
 msgid "Widget Language:"
@@ -162,31 +164,31 @@ msgstr "Bitte prüfen um den folgenden Text unter dem Widget anzuzeigen"
 
 #: feedweb_options.php:301
 msgid "Front Page Widget Color Sceme:"
-msgstr ""
+msgstr "Widget Farbschema der Titelseite"
 
 #: feedweb_options.php:309
 msgid "Select color scheme for the Front Page widget"
-msgstr ""
+msgstr "Wählen Sie ein Farbschema für das Titelseitenwidget"
 
 #: feedweb_options.php:314
 msgid "Max. Widget height (pixels):"
-msgstr ""
+msgstr "Max. Widget Höhe (Pixel)"
 
 #: feedweb_options.php:323
 msgid "Allowed height: 200 to 800 pixels. Recommended height: 400 pixels."
-msgstr ""
+msgstr "Zulässige Höhe: 200 bis 800 Pixel. Empfohlene Höhe: 400 Pixel"
 
 #: feedweb_options.php:328
 msgid "Vertical Scroll Bar:"
-msgstr ""
+msgstr "vertikale Bildlaufleiste"
 
 #: feedweb_options.php:334
 msgid "Hide"
-msgstr ""
+msgstr "Verbergen"
 
 #: feedweb_options.php:338
 msgid "Check to hide vertical scroll bar when the front widget exceeds max. height."
-msgstr ""
+msgstr "Abhaken um die vertikale Bildlaufleiste zu verbergen wenn das Front-Widget die max. Höhe überschreitet."
 
 #: feedweb_options.php:348
 msgid "Save Changes"
@@ -194,7 +196,7 @@ msgstr "Änderungen speichern"
 
 #: feedweb_options.php:350
 msgid "Learn how to use the Front Page Widget in your blog"
-msgstr ""
+msgstr "Lernen Sie das Titelseitenwidget in Ihrem Blog zu verwenden"
 
 #: feedweb_settings.php:10
 #: widget_commit.php:10
@@ -211,11 +213,11 @@ msgstr "Ich kann kein Widget in einen Beitrag eingeben der vor %d Tagen veröffe
 
 #: feedweb_util.php:411
 msgid "You have created %d widgets in the last 24 hours. The daily limit is %d new widgets"
-msgstr ""
+msgstr "Sie haben in den letzten 24 Stunden % Widgets entworfen. Das Tageslimit ist % neue Widgets"
 
 #: feedweb_util.php:418
 msgid "You have created %d widgets in the last 30 days. The monthly limit is %d new widgets"
-msgstr ""
+msgstr "Sie haben in den letzten 30 Tagen % Widgets entworfen. Das monatliche Limit ist % neue Widgets"
 
 #: widget_commit.php:63
 #: widget_commit.php:71
@@ -230,7 +232,7 @@ msgstr "Fehler in den Benutzerdaten"
 
 #: widget_commit.php:116
 msgid "Wordpress cannot modify your widget"
-msgstr ""
+msgstr "Wordpress kann Ihr Widget nicht ändern"
 
 #: widget_commit.php:139
 #: widget_commit.php:189
@@ -240,11 +242,11 @@ msgstr "Kann keine Verbindung zum Feedweb Server herstellen"
 
 #: widget_commit.php:151
 msgid "The widget has been updated"
-msgstr ""
+msgstr "Das Widget wurde aktualisiert"
 
 #: widget_commit.php:155
 msgid "Feedweb service cannot update the widget"
-msgstr ""
+msgstr "Feedweb Service kann das Widget nicht aktualisieren"
 
 #: widget_commit.php:171
 msgid "Wordpress cannot insert your widget"
@@ -252,7 +254,7 @@ msgstr "Wordpress kann Ihr Widget nicht einfügen"
 
 #: widget_commit.php:203
 msgid "Wordpress cannot remove your widget"
-msgstr ""
+msgstr "Wordpress kann Ihr Widget nicht entfernen"
 
 #: widget_commit.php:293
 msgid "Unknown server error"
@@ -264,11 +266,11 @@ msgstr "Feedweb Service kann kein Widget erstellen"
 
 #: widget_dialog.php:21
 msgid "Dear %s, Please configure your plugin settings before inserting the widget"
-msgstr ""
+msgstr "Sehr geehrte %s, bitte konfigurieren Sie Ihre Plugin-Einstellungen vor dem Einsetzen des Widgets"
 
 #: widget_dialog.php:175
 msgid "The rating widget in the post '%s' will be removed"
-msgstr ""
+msgstr "Das Bewertungs-Widget im Beitrag '%s' wird entfernt"
 
 #: widget_dialog.php:237
 msgid "http://en.wikipedia.org/wiki/Yes%E2%80%93no_question"
@@ -308,7 +310,7 @@ msgstr "Autor:"
 
 #: widget_dialog.php:528
 msgid "Post Language:"
-msgstr ""
+msgstr "Beitragssprache"
 
 #: widget_dialog.php:549
 msgid "URL:"
@@ -366,7 +368,7 @@ msgstr "< Zurück"
 
 #: widget_dialog.php:674
 msgid "Done"
-msgstr ""
+msgstr "Fertig"
 
 #: widget_remove.php:17
 msgid "The rating widget in the post %s will be removed"
